--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,51 +1,68 @@
 #contacto {
-    border: 2px solid #001546;
-    padding: 20px;
-    border-radius: 5px;
-    
-    margin: 20px;
-  }
-  
-  #contacto-title {
-    text-align: center;
-    font-size: 24px;
-    margin-bottom: 10px;
-  }
-  
+  border: 2px solid #001546;
+  padding: 20px;
+  border-radius: 5px;
+  margin: 20px;
+}
+
+#contacto-title {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.contact-form {
+  display: inline-block;
+  text-align: left;
+  margin-top: 20px;
+}
+
+legend {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  padding: 5px;
+  margin-bottom: 10px;
+}
+
+input[type="submit"] {
+  padding: 10px 20px;
+  background-color: #001546;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #001546;
+}
+
+/* responsive */
+@media screen and (max-width: 768px) {
   .contact-form {
-    display: inline-block;
-    text-align: left;
-    margin-top: 20px;
-  }
-  
-  legend {
-    font-weight: bold;
-    margin-bottom: 10px;
-  }
-  
-  label {
     display: block;
-    margin-bottom: 5px;
   }
-  
+
   input[type="text"],
   input[type="email"],
   textarea {
     width: 100%;
-    padding: 5px;
     margin-bottom: 10px;
   }
-  
+
   input[type="submit"] {
-    padding: 10px 20px;
-    background-color:#001546 ;
-    border: none;
-    color: white;
-    cursor: pointer;
+    width: 100%;
   }
-  
-  input[type="submit"]:hover {
-    background-color: #001546;
-  }
+}
 
 
