--- a/css/footer.css
+++ b/css/footer.css
@@ -1,22 +1,25 @@
 .footer {
-    
-    margin-top: 20px;
-    padding: 10px;
-    background-color: #001546;
-  }
-  
-  .footer a {
-    display: inline-block;
-    margin-right: 10px;
-  }
-  
-  .footer img {
-    width: 20px;
-  }
-  
-  .footer p {
-    margin-top: 10px;
-    font-size: 12px;
-    color: white;
-  }
-  
+  margin-top: 20px;
+  padding: 10px;
+  background-color: #001546;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer a {
+  display: inline-block;
+  margin: 5px;
+}
+
+.footer img {
+  width: 20px;
+}
+
+.footer h3 {
+  margin-top: 10px;
+  font-size: 12px;
+  color: white;
+  text-align: center;
+}
