--- a/css/sobre-mi.css
+++ b/css/sobre-mi.css
@@ -1,5 +1,3 @@
-
-
 .slider {
   width: 100%;
   height: 300px;
@@ -26,29 +24,38 @@
   height: auto;
 }
 
-
+.sobre-mi {
+  background-color: #A9CCE3;
+  padding: 20px;
+  margin: 20px;
+}
 
 .sobre-mi {
-    background-color:#A9CCE3;
-    padding: 20px;
-    margin: 20px;
+  border: 2px solid #001546;
+  padding: 20px;
+  border-radius: 5px;
+}
+
+.titulo-sobre-mi {
+  text-align: center;
+  color: black;
+  font-size: 24px;
+  margin-bottom: 10px;
+}
+
+.parrafo-sobre-mi {
+  text-align: justify;
+  color: black;
+  line-height: 1.5;
+}
+
+/*  responsive */
+@media screen and (max-width: 768px) {
+  .slider {
+    height: 200px;
   }
-  .sobre-mi {
-    border: 2px solid #001546;
-    padding: 20px;
-    border-radius: 5px;
-  }
-  
+
   .titulo-sobre-mi {
-    text-align: center;
-    color: black;
-    font-size: 24px;
-    margin-bottom: 10px;
+    font-size: 20px;
   }
-  
-  .parrafo-sobre-mi {
-    text-align: justify;
-    color: black;
-    line-height: 1.5;
-  }
-  
+}
