--- a/css/footer.css
+++ b/css/footer.css
@@ -2,15 +2,11 @@
   margin-top: 20px;
   padding: 10px;
   background-color: #001546;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
 }
 
 .footer a {
   display: inline-block;
-  margin: 5px;
+  margin-right: 10px;
 }
 
 .footer img {
@@ -21,5 +17,19 @@
   margin-top: 10px;
   font-size: 12px;
   color: white;
-  text-align: center;
 }
+
+@media screen and (max-width: 600px) {
+  .footer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+
+  .footer a {
+    margin-bottom: 10px;
+  }
+}
+
