--- a/css/portafolio.css
+++ b/css/portafolio.css
@@ -1,45 +1,3 @@
-/* Estilos para la sección educativa */
-
-.educativa {
-  padding: 20px;
-  background-color: #A9CCE3;
-}
-
-.educativa {
-  border: 2px solid #001546;
-  padding: 20px;
-  border-radius: 5px;
-  margin: 20px;
-}
-
-.titulo-educativa {
-  text-align: center;
-  margin-bottom: 20px;
-}
-
-.titulo-frameworks {
-  margin-bottom: 20px;
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.imagen-framework {
-  text-align: center;
-  margin-bottom: 20px;
-  width: 100%;
-  max-width: 200px;
-  border: 1px solid #ccc;
-  margin: 10px;
-}
-
-.contenedor-imagenes {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-/* Estilos para la sección de portafolio */
-
 .portafolio {
   padding: 20px;
   background-color: white;
@@ -86,4 +44,31 @@
   border: 1px solid black;
 }
 
-  
+@media screen and (max-width: 600px) {
+  .portafolio {
+    margin: 10px;
+    padding: 10px;
+  }
+
+  .titulo-portafolio {
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
+
+  .imagen-servicios {
+    margin-bottom: 10px;
+  }
+
+  .servicio {
+    margin-bottom: 10px;
+  }
+
+  .titulo-servicio {
+    font-size: 16px;
+    margin-bottom: 5px;
+  }
+
+  .descripcion-servicio {
+    font-size: 14px;
+  }
+}
